intel/bench_214/extr_.gitcompatmingw.c_xutftowcsn_with_main/log.txt
bench_214/extr_.gitcompatmingw.c_xutftowcsn_with_main/extr_.gitcompatmingw.c_xutftowcsn_with_main.c:12:15: error: cannot combine with previous 'char' declaration specifier
typedef  char wchar_t ;
              ^
bench_214/extr_.gitcompatmingw.c_xutftowcsn_with_main/extr_.gitcompatmingw.c_xutftowcsn_with_main.c:12:1: warning: typedef requires a name [-Wmissing-declarations]
typedef  char wchar_t ;
^~~~~~~~~~~~~~~~~~~~~
1 warning and 1 error generated.
HLS FPGA Parse FAILED.
